<resources>
    <string name="app_name" translatable="false">Fluid Wallpaper</string>
    <string name="title_main" translatable="false">Fluid Wallpaper</string>
    <string name="language" translatable="false">Language</string>
    <string name="please_select_language">Please select language</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="txt_continue">Continue</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="text_action">Action</string>
    <string name="text_stream">Stream</string>
    <string name="inverse_stream">Inverse stream</string>
    <string name="text_speed">Speed</string>
    <string name="text_size">Size</string>
    <string name="text_constant_speed">Constant speed</string>
    <string name="text_autoplay_sources">Autoplay sources</string>
    <string name="text_autoplay_speed">Autoplay speed</string>
    <string name="text_autoplay_burst">Autoplay burst</string>
    <string name="text_burst_frequency">Burst frequency</string>
    <string name="text_burst_on_app_resume">Burst on app resume</string>
    <string name="text_image_quality">Image quality</string>
    <string name="text_lowest">Lowest</string>
    <string name="text_low">Low</string>
    <string name="text_medium">Medium</string>
    <string name="text_high">High</string>
    <string name="text_very_high">Very high</string>
    <string name="text_best">Best</string>
    <string name="text_simulation_resolution">Simulation resolution</string>
    <string name="text_glow_shadow_quality">Glow &amp; shadow quality</string>
    <string name="text_fluid_type">Fluid type</string>
    <string name="text_smoke">Smoke</string>
    <string name="text_water">Water</string>
    <string name="text_jello">Jello</string>
    <string name="text_simulation_speed">Simulation speed</string>
    <string name="text_energy">Energy</string>
    <string name="text_swirliness">Swirliness</string>
    <string name="text_random_motion">Random motion</string>
    <string name="text_gravity">Gravity</string>
    <string name="text_border_mode">Border mode</string>
    <string name="text_wall">Wall</string>
    <string name="text_wrap">Wrap</string>
    <string name="text_wrap_and_mirror">Wrap and mirror</string>
    <string name="text_color_mode">Color mode</string>
    <string name="text_random_colors">Random colors</string>
    <string name="text_color_palette">Color palette</string>
    <string name="text_palette_with_background">Palette with background</string>
    <string name="text_triply_colors">Triply colors</string>
    <string name="text_color_scale">Color scale</string>
    <string name="text_magic_palette">Magic palette</string>
    <string name="text_color_saturation">Color saturation</string>
    <string name="text_background_color">Background color</string>
    <string name="text_cartoon_colors">Cartoon colors</string>
    <string name="text_magic_1">Magic 1</string>
    <string name="text_magic_2">Magic 2</string>
    <string name="text_color_shift">Color shift</string>
    <string name="text_shift_speed">Shift speed</string>
    <string name="text_black_background">Black background</string>
    <string name="text_color_change">Color change</string>
    <string name="text_invert_colors">Invert colors</string>
    <string name="text_on_click">On click</string>
    <string name="text_continuously">Continuously</string>
    <string name="text_double_palette">Double palette</string>
    <string name="text_1_low">#1 low</string>
    <string name="text_1_med">#1 med</string>
    <string name="text_1_high">#1 high</string>
    <string name="text_1_full">#1 full</string>
    <string name="text_2_low">#2 low</string>
    <string name="text_2_med">#2 med</string>
    <string name="text_2_high">#2 high</string>
    <string name="text_2_full">#2 full</string>
    <string name="text_draw_with_paint">Draw with paint</string>
    <string name="text_amount">Amount</string>
    <string name="text_lifetime">Lifetime</string>
    <string name="text_draw_with_particles">Draw with particles</string>
    <string name="text_mode">Mode</string>
    <string name="text_add_on_touch">Add on touch</string>
    <string name="text_fill_screen">Fill screen</string>
    <string name="text_shape">Shape</string>
    <string name="text_dot">Dot</string>
    <string name="text_trail">Trail</string>
    <string name="text_bubble">Bubble</string>
    <string name="text_line">Line</string>
    <string name="text_trail_length">Trail length</string>
    <string name="text_intensity">Intensity</string>
    <string name="text_smoothness">Smoothness</string>
    <string name="text_color_mixing">Color mixing</string>
    <string name="text_cover_edge">Cover + edge</string>
    <string name="text_add_up">Add up</string>
    <string name="text_cover">Cover</string>
    <string name="text_how_colors_mix_when_particles_appear_on_top_of_paint_or_each_other">How colors mix when particles appear on top of paint or each other?</string>
    <string name="text_fluid">FLUID</string>
    <string name="text_colors">COLORS</string>
    <string name="text_sim">SIM</string>
    <string name="text_highlight_edges_details">Highlight edges/details</string>
    <string name="text_scattering">Scattering</string>
    <string name="text_direction">Direction</string>
    <string name="text_random">Random</string>
    <string name="text_along_motion">Along motion</string>
    <string name="text_multi_image">Multi-image</string>
    <string name="text_mix_colors">Mix colors</string>
    <string name="text_mirror">Mirror</string>
    <string name="text_pattern">Pattern</string>
    <string name="text_horizontal">Horizontal</string>
    <string name="text_vertical">Vertical</string>
    <string name="text_kaleidoscope">Kaleidoscope</string>
    <string name="text_diagonal">Diagonal</string>
    <string name="text_3d_effect">3D effect</string>
    <string name="text_color_brightness">Color brightness</string>
    <string name="text_brightness">Brightness</string>
    <string name="text_blur_focus">Blur/focus</string>
    <string name="text_only_reflections_glow">Only reflections glow</string>
    <string name="text_glow_shadow">Glow &amp; shadow</string>
    <string name="text_near">Near</string>
    <string name="text_mid">Mid</string>
    <string name="text_far">Far</string>
    <string name="text_threshold">Threshold</string>
    <string name="text_shadow">Shadow</string>
    <string name="text_length">Length</string>
    <string name="text_self_shadow">Self shadow</string>
    <string name="text_inverse_shadows_rays">Inverse shadows (rays)</string>
    <string name="text_light">Light</string>
    <string name="text_light_color">Light color</string>
    <string name="text_custom_light_position">Custom light position</string>
    <string name="text_used_by_shadow">Used by Shadow, Light and 3D Effect options</string>
    <string name="text_position_x">Position X</string>
    <string name="text_position_y">Position Y</string>
    <string name="text_fluid_texture">Fluid texture</string>
    <string name="text_texture">Texture</string>
    <string name="text_fire">Fire</string>
    <string name="text_ice">Ice</string>
    <string name="text_cloud_1">Cloud 1</string>
    <string name="text_cloud_2">Cloud 2</string>
    <string name="text_veins">Veins</string>
    <string name="text_something_1">Something 1</string>
    <string name="text_something_2">Something 2</string>
    <string name="text_something_3">Something 3</string>
    <string name="text_something_4">Something 4</string>
    <string name="text_scale">Scale</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_share_with_friends">Share with friends</string>
    <string name="txt_version">Version %1$s</string>
    <string name="text_title_onboarding_1">Relieve Stress and Relax</string>
    <string name="text_content_onboarding_1">Just touch the screen and you can experience gorgeous fluid effects.</string>
    <string name="text_title_onboarding_2">Feel the Flow</string>
    <string name="text_content_onboarding_2">Very satisfying, psychedelic and trippy experience.</string>
    <string name="text_title_onboarding_3">Set as Live Wallpaper</string>
    <string name="text_content_onboarding_3">Experiment with infinite configurations, find the perfect one.</string>
    <string name="text_skip">Skip</string>
    <string name="set_wallpaper_success">Set WallPaper Success</string>
    <string name="please_feedback">Please feedback!</string>
    <string name="rate">Rate</string>
    <string name="txt_new">New</string>
    <string name="txt_trending">Trending</string>
    <string name="txt_apply">Apply</string>
    <string name="not_supported">Not supported on this device</string>
    <string name="preview">Preview</string>
    <string name="txt_loading">Loading...</string>
    <string name="please_wait_for_us_to_process_the_animation_thank_you">Please wait for us to process the animation! Thank you</string>
    <string name="text_thank_you">Thank you for using our Magic Wallpaper</string>
    <string name="text_rate_content">If you like this app, please rate our app 5 stars in store!</string>
    <string name="text_rate_now">Rate</string>
    <string name="thank_for_your_feedback">Thank for your feedback.</string>
    <string name="txt_hot">Hot</string>
    <string name="txt_title_empty">Nothing here</string>
    <string name="txt_content_empty">Click “here” to make new Effect\n</string>
    <string name="pick_effect">Pick Effect</string>
    <string name="set_name_for_your_effect">Set name for your Effect</string>
    <string name="let_s_create_the_cute_names_for_your_effect">Let\'s create the cute names for your effect</string>
    <string name="create">Create</string>
    <string name="saved">Saved!</string>
    <string name="make_another">Make another</string>
    <string name="create_effect_success">Create Effect Success</string>
    <string name="error_file_exists">File with this name is already exists!</string>
    <string name="themes">Themes</string>
    <string name="customs_themes">Customs Themes</string>
    <string name="this_action_can_contain_ads">This action may contain advertising</string>
    <string name="english" translatable="false">English</string>
    <string name="hindi" translatable="false">Hindi</string>
    <string name="spanish" translatable="false">Spanish</string>
    <string name="french" translatable="false">French</string>
    <string name="portuguese" translatable="false">Portuguese</string>
    <string name="indonesian" translatable="false">Indonesian</string>
    <string name="german" translatable="false">German</string>
    <string name="description_one_introduce">Immerse yourself in the enchanting world of live wallpapers</string>
    <string name="description_two_introduce">Unleash your creativity by customizing speed, color and intensity and more</string>
    <string name="description_three_introduce">Changing your wallpaper has never been this easy and enjoyable</string>
    <string name="title_one_introduce">Dive into a World of Dynamic Creativity</string>
    <string name="title_two_introduce">Unleash Your Personalization Power</string>
    <string name="title_three_introduce">Easy to Use, Hard to Resist</string>
    <string name="see_all">See all</string>
    <string name="new_update">New Update</string>
    <string name="feature">Feature</string>
    <string name="languages">Languages</string>
    <string name="policy">Policy</string>
    <string name="version">Version</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="do_you_like">Do you like</string>
    <string name="give_us_a_quick_rating_so_we">Give us a quick rating so we know if you like it?</string>
    <string name="no_later">No later</string>
    <string name="rate_us">Rate us</string>
    <string name="_ok">OK</string>
</resources>