<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_dialog_set_name"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="@dimen/_20sdp">

        <TextView
            android:id="@+id/tv_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/be_vietnam_pro_semi_bold"
            android:gravity="center"
            android:text="@string/set_name_for_your_effect"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/be_vietnam_pro_regular"
            android:gravity="center"
            android:text="@string/let_s_create_the_cute_names_for_your_effect"
            android:textColor="@color/color_80838A"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/edt_file_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="23dp"
            android:background="@drawable/bg_edit_text"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="30"
            android:paddingVertical="15dp"
            android:paddingStart="17dp"
            android:paddingEnd="40dp"
            android:hint="Effect_Name"
            android:textColor="@color/white"
            android:textColorHint="@color/color_B3B5B9"
            android:textCursorDrawable="@drawable/color_cursor" />


        <TextView
            android:id="@+id/tv_create"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bg_button_create"
            android:fontFamily="@font/be_vietnam_pro_semi_bold"
            android:gravity="center"
            android:paddingVertical="@dimen/_7sdp"
            android:paddingTop="16dp"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>
</layout>