<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgStateRate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_110sdp"
            android:elevation="@dimen/_10sdp"
            android:src="@drawable/img_rate_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_minus45sdp"
            android:background="@drawable/custom_dialog_rating"
            android:paddingBottom="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgStateRate"
            app:layout_constraintVertical_bias="1.0">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250sdp"
                android:layout_marginTop="@dimen/_minus50sdp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_shadow_bottom"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_34sdp"
                android:fontFamily="@font/poppin_bold"
                android:text="@string/do_you_like"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:fontFamily="@font/poppin_medium"
                android:text="@string/give_us_a_quick_rating_so_we"
                android:textAlignment="center"
                android:textColor="@color/color_BEBEBE"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <RatingBar
                android:id="@+id/rbRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:numStars="5"
                android:padding="@dimen/_2sdp"
                android:progress="5"
                android:progressDrawable="@drawable/progress_rating"
                android:rating="5"
                android:stepSize="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvContent" />

            <TextView
                android:id="@+id/tvRate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/background_rate_gradient"
                android:fontFamily="@font/poppin_medium"
                android:gravity="center"
                android:text="@string/rate_us"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintTop_toBottomOf="@+id/rbRate" />

            <TextView
                android:id="@+id/tvNoLater"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/poppin_medium"
                android:gravity="center"
                android:text="@string/no_later"
                android:textColor="@color/color_C8C8C8"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintTop_toBottomOf="@+id/tvRate" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>